# PICO-FI

./: .gdbinit-rustrover  .gitignore  Cargo.toml  DEBUGGING.md  I2C_PROTOCOL.md  SPI_PROTOCOL.md  UART_PROTOCOL.md  build-role.py  build-role.sh  build.py  build.rs  comprehensive_test.py  flash-firmware.sh  i2c_bus_check.py  i2c_detect.py  i2c_link_terminal.py  i2c_raw.py  i2c_test.py  memory.x  pico-fi-client.json  pico-fi-server.json  pico-fi-server_spi.json  pico-fi-server_spi_echo.json  pico-fi-server_spi_line_high.json  pico-fi-server_spi_static.json  pico-fi.json  pico_test_client.py  rustrover-gdb.sh  spi_link_terminal.py  spi_test.py  start-debugger.sh  test_i2c_chunking.py  test_python_updates.py  uart_link_terminal.py  uart_test.py
.cargo/: config.toml
host/: README.md  __init__.py  i2c_backend.rs  spi_backend.rs
host-tests/: Cargo.toml
host-tests/tests/: python_bridge_soak.rs
host/python/: __init__.py  bridge_framing.py  bridge_ssh_test.py  fuzz_bridge_stability.py  sedsprintf_router_common.py  telemetry_cli.py  telemetry_terminal.py  test_bridge_framing.py  test_bridge_transport_soak.py  test_sedsprintf_router_common.py  test_telemetry_cli.py  test_transport_framing_roundtrip.py
host/python/i2c/: __init__.py  bus_check.py  detect.py  link_terminal.py  protocol.py  (+3 more)
src/: config.rs  main.rs  net.rs  shell.rs  storage.rs
src/bridge/: commands.rs  i2c.rs  i2c_task.rs  mod.rs  overwrite_queue.rs  runtime.rs  spi.rs  spi_diag.rs  spi_frame.rs  spi_hw_task.rs  spi_pio.rs  spi_task.rs  test.rs  uart.rs  usb.rs
src/protocol/: i2c.rs  mod.rs  spi.rs
(+15 files in other folders)
