[package]
name = "pico-fi"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pico-fi"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.0", features = ["dhcpv4", "medium-ethernet", "tcp"] }
embassy-net-wiznet = "0.3.0"
embassy-rp = { version = "0.10.0", features = ["critical-section-impl", "time-driver", "rp2040"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embassy-usb = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"
heapless = "0.9.2"
nb = "1.1.0"
panic-halt = "1.0.0"
pio = "0.3.0"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
rp-pac = "7.0.0"
rp2040-hal = "0.12.0"
static_cell = "2.1.1"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
debug = 2

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = 3
